A sample website for Hemut

--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hemut-ai-logistics-platform</title>
+    <title>Hemut - AI-Powered Transport Management System</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
+    <meta name="keywords" content="Lovable, Generated, Project" />
+    <meta name="robots" content="index, follow" />
 
     <meta property="og:title" content="hemut-ai-logistics-platform" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lovable.dev" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="hemut-ai-logistics-platform" />
+    <meta name="twitter:description" content="Lovable Generated Project" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
 
   <body>
